--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -57,3 +57,6 @@
 8. To save the filter view, click **Data** > **View options** > **Save view** > **Save**.
 9. To delete the filter view, at the top, click **Data** > **View options** > **Delete all views in tab**.
 ---
+### For Task no 3, 4 & 5
+  * Download this excel file to your local decstop and Import in the sheet labeled `Items`
+---
