--- a/Validate Data in Google Sheets/GSP1062.md
+++ b/Validate Data in Google Sheets/GSP1062.md
@@ -58,5 +58,5 @@
 9. To delete the filter view, at the top, click **Data** > **View options** > **Delete all views in tab**.
 ---
 ### For Task no 3, 4 & 5
-  * Download this excel file to your local decstop and Import in the sheet labeled `Items`
+  * Download this excel file to your local decstop and **Import** in the sheet labeled `Items`: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Validate%20Data%20in%20Google%20Sheets/GSP1062.xlsx)
 ---
