--- a/Pivot Tables in Google Sheets/GSP1065.md
+++ b/Pivot Tables in Google Sheets/GSP1065.md
@@ -1,9 +1,9 @@
 <h1 align="center">
-✨ Pub/Sub: Qwik Start - Python || GSP094 ✨
+✨ Pivot Tables in Google Sheets || GSP1065 ✨
 </h1>
 
 <div align="center">
-  <a href="https://www.cloudskillsboost.google/focuses/2775?parent=catalog"_blank" rel="noopener noreferrer">
+  <a href="https://www.cloudskillsboost.google/focuses/47354?parent=catalog"_blank" rel="noopener noreferrer">
     <img src="https://img.shields.io/badge/Open_Lab-Cloud_Skills_Boost-4285F4?style=for-the-badge&logo=google&logoColor=white&labelColor=34A853" alt="Open Lab Badge">
   </a>
 </div>
