--- a/Pivot Tables in Google Sheets/GSP1065.md
+++ b/Pivot Tables in Google Sheets/GSP1065.md
@@ -32,3 +32,47 @@
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
 * Download Excel sheet from here: [Download]()
+* In the top left, under Start a new spreadsheet, click + to open a blank spreadsheet in a new browser tab.
+* At the top, click File > Import. The Import file dialog opens.
+* Click the Upload tab. To upload the file, drag the file from step 1 into the upload window or select the file from your device.
+* In the Import location dropdown, select Replace spreadsheet, and then click Import data.
+* At the top, change the filename from Untitled spreadsheet to
+  ```
+  On the Rise Bakery Web Traffic
+  ```
+---
+
+## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
+
+Your hard work and determination paid off! 💻
+You've successfully completed the lab. **Way to go!** 🚀
+
+
+<div align="center" style="padding: 5px;">
+  <h3>📱 Join the Arcade With Us Community</h3>
+  
+  <a href="https://chat.whatsapp.com/KN3NvYNTJvU5xMCVTORJtS">
+    <img src="https://img.shields.io/badge/Join_WhatsApp-25D366?style=for-the-badge&logo=whatsapp&logoColor=white" alt="Join WhatsApp 👥">
+  </a>
+  &nbsp;
+  <a href="https://youtube.com/@arcadewithus_we?si=yeEby5M3k40gdX4l">
+    <img src="https://img.shields.io/badge/Subscribe-Arcade%20With%20Us-FF0000?style=for-the-badge&logo=youtube&logoColor=white" alt="YouTube Channel">
+  </a>
+  &nbsp;
+  <a href="https://www.linkedin.com/in/tripti-gupta-a28a6832b/">
+    <img src="https://img.shields.io/badge/LINKEDIN-Tripti%20Gupta-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn">
+</a>
+
+
+</div>
+
+---
+
+<div align="center">
+  <p style="font-size: 12px; color: #586069;">
+    <em>This guide is provided for educational purposes. Always follow Qwiklabs terms of service and YouTube's community guidelines.</em>
+  </p>
+  <p style="font-size: 12px; color: #586069;">
+    <em>Last updated: April 2025</em>
+  </p>
+</div>
