--- a/Pivot Tables in Google Sheets/GSP1065.md
+++ b/Pivot Tables in Google Sheets/GSP1065.md
@@ -34,9 +34,9 @@
 * Download Excel sheet from here: [Download](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Pivot%20Tables%20in%20Google%20Sheets/On%20the%20Rise%20Bakery%20Web%20Traffic.xlsx)
 * In the top left, under Start a new spreadsheet, click + to open a blank spreadsheet in a new browser tab.
 * At the top, click File > **Import**. The Import file dialog opens.
-* Click the Upload tab. To upload the file, drag the file from step 1 into the upload window or select the file from your device.
-* In the Import location dropdown, select Replace spreadsheet, and then click Import data.
-* At the top, change the filename from Untitled spreadsheet to
+* Click the **Upload** tab. To upload the file, drag the file from step 1 into the upload window or select the file from your device.
+* In the Import location dropdown, select Replace spreadsheet, and then click **Import data**.
+* At the top, change the filename from `Untitled spreadsheet` to
 
   ```
   On the Rise Bakery Web Traffic
