--- a/Pivot Tables in Google Sheets/GSP1065.md
+++ b/Pivot Tables in Google Sheets/GSP1065.md
@@ -39,7 +39,7 @@
 * At the top, change the filename from `Untitled spreadsheet` to
 
   ```
-  On the Rise Bakery Web Traffic
+  **On the Rise Bakery Web Traffic**
   ```
 ---
 
