--- a/Conversational Agents: Managing Environments/GSP929.md
+++ b/Conversational Agents: Managing Environments/GSP929.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨  APIs Explorer: App Engine || GSP422 ✨
+✨  Conversational Agents: Managing Environments || GSP929 ✨
 </h1>
 
 <div align="center">
