--- a/Conversational Agents: Managing Environments/GSP929.md
+++ b/Conversational Agents: Managing Environments/GSP929.md
@@ -31,17 +31,46 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
+🔗 **Download Blob File**: [Click here](https://drive.google.com/file/d/17Nbx7lQg0F-nmMvjPAnckDhaZ9AUM3KQ/view?usp=sharing)
 
-## 💻 **Execute in Cloud Shell** 
+### Step 1: Create Versions
+
+1. Create Version `v1`
+
+   * **Display Name:**
+
+     ```text
+     Flight booker main v1 chat bot
+     ```
+
+2. Create Version `v2`
+
+   * **Display Name:**
+
+     ```text
+     Flight booker main v2 chat bot
+     ```
+
+### Step 2: Create Environments
+
+1. Create Environment `QA`
+
+   * **Name:** QA
+   * **Version:** Flight booker main v1 chat bot
+
+2. Create Environment `Dev`
+
+   * **Name:** Dev
+   * **Version:** Flight booker main v2 chat bot
+
+### Step 3: Test the Agent
+
+Run this test prompt:
+
+```text
+i want to book a flight
 ```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/APIs%20Explorer%20App%20Engine/GSP422.sh
 
-sudo chmod +x GSP422.sh
-
-./GSP422.sh
-```
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
