--- a/Getting Started with Liquid to Customize the Looker User Experience/GSP933.md
+++ b/Getting Started with Liquid to Customize the Looker User Experience/GSP933.md
@@ -30,6 +30,9 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
+### 🚨 First, click the toggle button to turn on the Development mode.
+![Arcade With Us](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
+
 ## 🛠️ Looker Configuration Guide 🚀
 
 > 💡 **Pro Tip:** Follow along with the complete video tutorial to ensure you achieve full scores on all "Check My Progress" validation steps!
