--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -29,6 +29,8 @@
 
 ## ⚙️ <ins>Lab Environment Setup</ins>
 
+1. Right-click **VERIFY DOMAIN** in either the `yellow box` at the top or the red box in the Domains card, and select Open link in new tab.
+
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
 
