--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -30,8 +30,13 @@
 ## ⚙️ <ins>Lab Environment Setup</ins>
 
 1. Right-click **VERIFY DOMAIN** in either the `yellow box` at the top or the red box in the Domains card, and select Open link in new tab.
+2. Click the new tab, called Domain setup, to complete the Google Workspace domain verification steps.
+3. On the Let's set up your domain page, click Get Started.
+4. Select the My domain uses a different host checkbox and then click Continue.
+5. At the bottom of the Add verification code page, select the Come back here and confirm once you have updated the code on your domain host checkbox, and then click Confirm.
+6. Wait until it says Your domain is verified! and then close the Domain setup tab
 
-> ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
+> ✅ **NOTE:** Do not click *Activate Gmail.*
 
 
 ---
