--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -40,6 +40,12 @@
 
 # Create Organization units and Add new Users according to the table:
 
+| No. | First Name | Last Name | Primary Email | OU Name | Description |
+|----:|------------|-----------|---------------|---------|-------------|
+|1| Jamie | Marketeer | jamie.marketeer | Marketing | The Marketing team |
+|2|Leslie| Compliance | leslie.compliance | Compliance | The Marketing team |
+|3|Jesse | Contractor | jesse.contractor | Contractors | The Marketing team |
+
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
