--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -46,6 +46,12 @@
 | 2.|Leslie| Compliance | leslie.compliance | Compliance | The Marketing team |
 | 3.|Jesse | Contractor | jesse.contractor | Contractors | The Marketing team |
 
+## Next steps for task no 1:
+1. Select the checkbox next to Name `Jamie Marketeer`.
+2. Click **More options** > **Change organizational unit**. The Change organizational unit dialog opens.
+3. Under Google Workspace Labs, select **Marketing**.
+4. Click **Continue**, then click **Change**.
+5. Click on the name **Jamie Marketeer**, then click **RESET PASSWORD**, and choose **`Generate a new password`**.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
