--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -52,6 +52,7 @@
 3. Under Google Workspace Labs, select **Marketing**.
 4. Click **Continue**, then click **Change**.
 5. Click on the name **Jamie Marketeer**, then click **RESET PASSWORD**, and choose **`Generate a new password`**.
+> ✅ **NOTE:** Note the **username** and **password**. These `will be used later` in the lab.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
