--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -53,6 +53,7 @@
 4. Click **Continue**, then click **Change**.
 5. Click on the name **Jamie Marketeer**, then click **RESET PASSWORD**, and choose **`Generate a new password`**.
 > ✅ **NOTE:** Note the **username** and **password**. These `will be used later` in the lab.
+6. Repeat steps 1-6 to **create two more users** and assign them to an **OU** as described in the table.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
