--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -54,6 +54,13 @@
 5. Click on the name **Jamie Marketeer**, then click **RESET PASSWORD**, and choose **`Generate a new password`**.
 > ✅ **NOTE:** Note the **username** and **password**. These `will be used later` in the lab.
 6. Repeat steps 1-6 to **create two more users** and assign them to an **OU** as described in the table.
+
+## For Task no 2;
+1. Click Main menu (Navigation menu icon) > Apps > Google Workspace > Gmail.
+2. Click the Service status card.
+3. In the left panel, under Google Workspace Labs, click Contractors.
+4. For Service status, select OFF and click OVERRIDE to override the inherited settings and disable Gmail for all users in the Contractors OU.
+5. OPen Gmail in Incognito window: [Click](https://mail.google.com/)
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
