--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -60,7 +60,12 @@
 2. Click the Service status card.
 3. In the left panel, under Google Workspace Labs, click Contractors.
 4. For Service status, select OFF and click OVERRIDE to override the inherited settings and disable Gmail for all users in the Contractors OU.
-5. OPen Gmail in Incognito window: [Click](https://mail.google.com/)
+5. Open Gmail in Incognito window: [Click](https://mail.google.com/)
+6. Click Add another account.
+7. For Email or phone, enter the email of Jesse Contractor that you recorded in an earlier section.
+8. Click Next.
+9. For Enter your password, enter the password of Jesse Contractor that you previously noted and click Next.
+10. Create a secure password and click Change password. eg. `ArcadeWithUs0104`
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
