--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨  APIs Explorer: App Engine || GSP422 ✨
+✨  Google Workspace Admin: Managing Applications || GSP417 ✨
 </h1>
 
 <div align="center">
