--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -56,7 +56,7 @@
 6. Repeat steps 1-6 to **create two more users** and assign them to an **OU** as described in the table.
 
 ## For Task no 2;
-1. Click Main menu (Navigation menu icon) > Apps > Google Workspace > Gmail.
+1. Click Main menu > Apps > Google Workspace > Gmail.
 2. Click the Service status card.
 3. In the left panel, under Google Workspace Labs, click Contractors.
 4. For Service status, select OFF and click OVERRIDE to override the inherited settings and disable Gmail for all users in the Contractors OU.
@@ -66,6 +66,7 @@
 8. Click Next.
 9. For Enter your password, enter the password of Jesse Contractor that you previously noted and click Next.
 10. Create a secure password and click Change password. eg. `ArcadeWithUs0104`
+11. A page opens with a message explaining that Jesse Contractor does not have access to Gmail.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
