--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -67,6 +67,7 @@
 9. For Enter your password, enter the password of Jesse Contractor that you previously noted and click Next.
 10. Create a secure password and click Change password. eg. `ArcadeWithUs0104`
 11. A page opens with a message explaining that Jesse Contractor does not have access to Gmail.
+12. Follow the steps no 6-10 for Jamie Marketeer & Leslie Compliance.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
