--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -68,6 +68,19 @@
 10. Create a secure password and click Change password. eg. `ArcadeWithUs0104`
 11. A page opens with a message explaining that Jesse Contractor does not have access to Gmail.
 12. Follow the steps no 6-10 for **Jamie Marketeer** & **Leslie Compliance.**
+
+## For task no 3:
+1. Click Main menu (Navigation menu icon) > Apps > Google Workspace > Google Vault.
+2. Click the Service status card.
+3. Click OFF for everyone to disable Google Vault for all users. Click SAVE.
+4. In the left panel, under Google Workspace Labs, click Compliance.
+5. For Service status, click ON and then OVERRIDE to override the inherited settings.
+6. Click TURN ON when prompted.
+7. Switch to the Gmail tab that is logged in as Leslie Compliance.
+8. Click on the Google apps icon.
+9. Scroll down and click Vault.
+10. Check the same steps with Jamie Marketeer & Jesse Contractor.
+
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
