--- a/Google Workspace Admin: Managing Applications/GSP417.md
+++ b/Google Workspace Admin: Managing Applications/GSP417.md
@@ -59,7 +59,7 @@
 1. Click Main menu > **Apps** > **Google Workspace** > **Gmail**.
 2. Click the Service status card.
 3. In the left panel, under Google Workspace Labs, click **Contractors**.
-4. For Service status, select OFF and click **`OVERRIDE`** to override the inherited settings and disable Gmail for all users in the Contractors OU.
+4. For Service status, select **OFF** and click **`OVERRIDE`** to override the inherited settings and disable Gmail for all users in the Contractors OU.
 5. Open Gmail in Incognito window: [Click](https://mail.google.com/)
 6. Click `Add another account`.
 7. For Email or phone, `enter the email of Jesse Contractor that you recorded in an earlier section`.
