--- a/Creating dynamic SQL derived tables with LookML and Liquid/GSP932.md
+++ b/Creating dynamic SQL derived tables with LookML and Liquid/GSP932.md
@@ -182,6 +182,9 @@ explore: events {
 }
 
 ```
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
 
 > ⚡ **Note:** Save your changes after completing each step to ensure proper configuration.
 
