--- a/Getting Started with Liquid to Customize the Looker User Experience/GSP933.md
+++ b/Getting Started with Liquid to Customize the Looker User Experience/GSP933.md
@@ -325,7 +325,9 @@ view: order_items {
   }
 
 ```
-
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
 > ⚡ **Note:** Save your changes after completing each step to ensure proper configuration.
 ---
 
