--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -214,8 +214,8 @@ view: order_items {
 }
 ```
 * Click Save Changes.
-* Next, navigate to the Order Items Explore.
-* Under the Order Items view, select the new Dynamic Timeframe dimension and the Order Count measure.
+* Next, navigate to the **Order Items Explore**.
+* Under the Order Items view, select the new **`Dynamic Timeframe`** dimension and the **`Order Count`** measure.
 * Click on the filter icon next to the new Filter-Only Field called Select Timeframe.
 * For the filter option at the top of the UI, leave “is” selected. Select Month from the drop-down menu.
 * Next, select the Week and Date filters. Click Run to see the updated results for each of them.
