--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -306,6 +306,15 @@ view: products {
   }
 }
 ```
+* Click Save Changes. Next, navigate to the Order Items Explore.
+* Under the Products view, select the dimension called Category Comparison.
+* Click on the filter icon next to the new Filter-Only Field called Select Category.
+* Under the Order Items view, select the Order Count measure.
+* For the filter option at the top of the UI, leave “is equal to” selected.
+* Click in the empty text box to see the drop-down menu, or type Jeans
+* Click Run to see the results.
+
+---
 
 ### 📊 Step 3: Update the `user` View
 
@@ -423,6 +432,14 @@ view: users {
   }
 }
 ```
+* Click Save Changes. Next, navigate to the Order Items Explore.
+* Under the Users view, select the Country dimension (or some other dimension to get a count by attribute).
+* Select the new Dynamic Count measure under the Users view.
+* Click on the filter icon next to the new Filter-Only Field called Select Traffic Source.
+* For the filter value at the top of the UI, leave “is equal to” selected.
+* Click in the empty text box to see the drop-down menu, or type Email
+
+---
 
 ### 📝 Step 4: Update the `training_ecommerce` Model File
 
