--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -214,7 +214,7 @@ view: order_items {
   }
 }
 ```
-* Click Save Changes.
+* Click **Save Changes**.
 * Next, navigate to the **Order Items Explore**.
 * Under the Order Items view, select the new **`Dynamic Timeframe`** dimension and the **`Order Count`** measure.
 * Click on the `filter` icon next to the new Filter-Only Field called **`Select Timeframe`**.
@@ -306,7 +306,7 @@ view: products {
   }
 }
 ```
-* Click Save Changes. Next, navigate to the Order Items Explore.
+* Click **Save Changes**. Next, navigate to the **Order Items Explore**.
 * Under the Products view, select the dimension called Category Comparison.
 * Click on the filter icon next to the new Filter-Only Field called Select Category.
 * Under the Order Items view, select the Order Count measure.
