--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -307,12 +307,12 @@ view: products {
 }
 ```
 * Click **Save Changes**. Next, navigate to the **Order Items Explore**.
-* Under the Products view, select the dimension called Category Comparison.
-* Click on the filter icon next to the new Filter-Only Field called Select Category.
-* Under the Order Items view, select the Order Count measure.
-* For the filter option at the top of the UI, leave “is equal to” selected.
-* Click in the empty text box to see the drop-down menu, or type Jeans
-* Click Run to see the results.
+* Under the Products view, select the dimension called **`Category Comparison`**.
+* Click on the `filter` icon next to the new Filter-Only Field called Select **`Category`**.
+* Under the Order Items view, select the **`Order Count`** measure.
+* For the filter option at the top of the UI, leave “**is equal to**” selected.
+* Click in the empty text box to see the drop-down menu, or type `Jeans`
+* Click **Run** to see the results.
 
 ---
 
