--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -432,12 +432,13 @@ view: users {
   }
 }
 ```
-* Click Save Changes. Next, navigate to the Order Items Explore.
-* Under the Users view, select the Country dimension (or some other dimension to get a count by attribute).
-* Select the new Dynamic Count measure under the Users view.
-* Click on the filter icon next to the new Filter-Only Field called Select Traffic Source.
-* For the filter value at the top of the UI, leave “is equal to” selected.
-* Click in the empty text box to see the drop-down menu, or type Email
+* Click **Save Changes**. Next, navigate to the Order Items Explore.
+* Under the Users view, select the **`Country`** dimension.
+* Select the new **`Dynamic Count`** measure under the **Users** view.
+* Click on the `filter` icon next to the new Filter-Only Field called **`Select Traffic Source`**.
+* For the filter value at the top of the UI, leave “**is equal to**” selected.
+* Click in the empty text box to see the drop-down menu, or type `Email`.
+* Click **Run** to see the results.
 
 ---
 
