--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -534,6 +534,9 @@ explore: +order_items {
   }
 }
 ```
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
 
 > ⚡ **Note:** Save your changes after completing each step to ensure proper configuration.
 
