--- a/Gmail: Getting Started/GSP465.md
+++ b/Gmail: Getting Started/GSP465.md
@@ -1,9 +1,9 @@
 <h1 align="center">
-✨  APIs Explorer: App Engine || GSP422 ✨
+✨  Gmail: Getting Started || GSP465 ✨
 </h1>
 
 <div align="center">
-  <a href="https://www.cloudskillsboost.google/focuses/3662?parent=catalog"_blank" rel="noopener noreferrer">
+  <a href=""_blank" rel="noopener noreferrer">
     <img src="https://img.shields.io/badge/Open_Lab-Cloud_Skills_Boost-4285F4?style=for-the-badge&logo=google&logoColor=white&labelColor=34A853" alt="Open Lab Badge">
   </a>
 </div>
