--- a/Gmail: Getting Started/GSP465.md
+++ b/Gmail: Getting Started/GSP465.md
@@ -31,7 +31,12 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-
+## For Task no 1:
+1. In Gmail, on the left, click Compose.
+2. Click Compose to create a new email message.
+3. To add a recipient to the email, type their email address in the To field, then press Enter.
+4. Add a subject and a short message.
+5. Download attachment from here: [Click Here](https://cdn.qwiklabs.com/89%2F67S6FwhLTQ2JtnOED54IndqXR3mrUv5%2Fc5yM8maQ%3D)
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
