--- a/Gmail: Getting Started/GSP465.md
+++ b/Gmail: Getting Started/GSP465.md
@@ -37,6 +37,8 @@
 3. To add a recipient to the email, type their email address in the To field, then press Enter.
 4. Add a subject and a short message.
 5. Download attachment from here: [Click Here](https://cdn.qwiklabs.com/89%2F67S6FwhLTQ2JtnOED54IndqXR3mrUv5%2Fc5yM8maQ%3D)
+6. Alternatively, click the attachment to open a full-screen view. In the upper right, choose to Add to my drive or Download the attached file.
+7. Click Send.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
