--- a/Gmail: Getting Started/GSP465.md
+++ b/Gmail: Getting Started/GSP465.md
@@ -40,6 +40,9 @@
 6. Alternatively, click the attachment to add in the email.
 7. Click Send.
 ---
+## For Task no 2:
+1. In the top right, click **Settings gear icon** > **See all settings**.
+2. In the General tab, scroll down to Vacation responder then select **Vacation responder on** or **Vacation responder off**.
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
