--- a/Gmail: Getting Started/GSP465.md
+++ b/Gmail: Getting Started/GSP465.md
@@ -43,6 +43,7 @@
 ## For Task no 2:
 1. In the top right, click **Settings gear icon** > **See all settings**.
 2. In the General tab, scroll down to Vacation responder then select **Vacation responder on** or **Vacation responder off**.
+3. **When you turn on the vacation responder, enter the dates you're away, add a message** ``` Have a nice day```
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
