--- a/Gmail: Getting Started/GSP465.md
+++ b/Gmail: Getting Started/GSP465.md
@@ -45,7 +45,12 @@
 2. In the General tab, scroll down to Vacation responder then select **Vacation responder on** or **Vacation responder off**.
 3. **When you turn on the vacation responder, enter the dates you're away, add a message** ```Have a nice day```
 4. Scroll to the bottom and click **Save Changes**.
-
+---
+## For Task no 3:
+1. Scroll to the bottom. In the Labels section click Create new label.
+2. Enter "Gmail Team" as the new label name, and then click Create.
+3. From an email, click Labels > Create new.
+4. Name the label "Tips" and click Create. The new label automatically applies to your email.
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
