--- a/Gmail: Getting Started/GSP465.md
+++ b/Gmail: Getting Started/GSP465.md
@@ -47,10 +47,22 @@
 4. Scroll to the bottom and click **Save Changes**.
 ---
 ## For Task no 3:
-1. Scroll to the bottom. In the Labels section click Create new label.
-2. Enter "Gmail Team" as the new label name, and then click Create.
-3. From an email, click Labels > Create new.
-4. Name the label "Tips" and click Create. The new label automatically applies to your email.
+1. Scroll to the bottom. In the Labels section click **Create new label**.
+2. Enter "**`Gmail Team`**" as the new label name, and then click **Create**.
+3. From an email, click **Labels** > **Create new**.
+4. Name the label "**`Tips`**" and click Create. The new label automatically applies to your email.
+5. In the Gmail search box, click **Show search options Show search options icon**.
+6. For search criteria, in the From field, type **`gmail`**, then click `Create filter`.
+7. Click **OK** in the confirmation dialog.
+8. Check **`Skip the Inbox (Archive it)`** then click **Create filter**.
+---
+## For Task no 4:
+1. Click Settings > See all Settings.
+2. In the General tab, scroll down to the Signature section and click **Create New**.
+3. Give this **signature** a `name`, then click `Create`.
+4. Scroll to the bottom and click **Save Changes**.
+---
+
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
