--- a/Conversational Agents: Managing Environments/GSP929.md
+++ b/Conversational Agents: Managing Environments/GSP929.md
@@ -34,7 +34,7 @@
 🔗 **Download Blob File**: [Click here](https://drive.google.com/file/d/17Nbx7lQg0F-nmMvjPAnckDhaZ9AUM3KQ/view?usp=sharing)
 
 ### Step 1: Create Versions
-
+In a new incognito window, go to the [Conversational Agents](https://conversational-agents.cloud.google.com/projects) page.
 1. Create Version `v1`
 
    * **Display Name:**
