--- a/Conversational Agents: Managing Environments/GSP929.md
+++ b/Conversational Agents: Managing Environments/GSP929.md
@@ -35,6 +35,12 @@
 
 ### Step 1: Create Versions
 In a new incognito window, go to the [Conversational Agents](https://conversational-agents.cloud.google.com/projects) page.
+  * In the Agents window, click **Create agent**.
+  * Click **Build your own**.
+  * Display name will be **`Flight Booker - Env Mgt`**
+  * Location will be `according to your lab region`.
+  * Conversation Start- Select **Flow**
+
 1. Create Version `v1`
 
    * **Display Name:**
