--- a/Conversational Agents: Managing Environments/GSP929.md
+++ b/Conversational Agents: Managing Environments/GSP929.md
@@ -40,6 +40,10 @@ In a new incognito window, go to the [Conversational Agents](https://conversatio
   * Display name will be **`Flight Booker - Env Mgt`**
   * Location will be `according to your lab region`.
   * Conversation Start- Select **Flow**
+  * Click **Create**.
+  * After creating the agent, navigate to **Settings** > **General** > **Logging settings**
+  * Click **Enable Cloud Logging** and **Enable conversation history**.
+  * Click **Save**.
 
 1. Create Version `v1`
 
