--- a/Connected Sheets: Qwik Start/GSP870.md
+++ b/Connected Sheets: Qwik Start/GSP870.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨🌐   Connected Sheets: Qwik Start || GSP870 ✨
+🌐   Connected Sheets: Qwik Start || GSP870 🌐
 <div align="center">
 <a href="https://www.cloudskillsboost.google/focuses/18109?parent=catalog" target="_blank" rel="noopener noreferrer">
     <img src="https://img.shields.io/badge/Open_Lab-Cloud_Skills_Boost-4285F4?style=for-the-badge&logo=google&logoColor=white&labelColor=34A853" alt="Open Lab Badge">
