--- a/Answering Complex Questions Using Native Derived Tables with LookML/GSP935.md
+++ b/Answering Complex Questions Using Native Derived Tables with LookML/GSP935.md
@@ -176,7 +176,7 @@ explore: +order_items {
 
 # Place in `training_ecommerce` model
 explore: +order_items {
-    query: ArcadeCrew2 {
+    query: arcadewithus2 {
       dimensions: [inventory_items.product_brand]
       measures: [total_revenue]
     }
@@ -186,7 +186,7 @@ explore: +order_items {
 
 # Place in `training_ecommerce` model
 explore: +order_items {
-    query: ArcadeCrew3 {
+    query: arcadewithus3 {
       dimensions: [brand_order_facts.brand_rank_grouped, created_date, users.age, users.country]
       measures: [total_revenue]
       filters: [
