--- a/Answering Complex Questions Using Native Derived Tables with LookML/GSP935.md
+++ b/Answering Complex Questions Using Native Derived Tables with LookML/GSP935.md
@@ -202,6 +202,9 @@ explore: +order_items {
 
 > ⚡ **Note:** Save your changes after completing each step to ensure proper configuration.
 
+* Select **pie chart**
+* Set Row limit to `10`
+* set the measure **`Brand Order Facts`** in `Ascending Order`
 * **Title your Look:** `Ranked Brand Revenue`
 ```
 Ranked Brand Revenue
