--- a/Use Functions, Formulas, and Charts in Google Sheets: Challenge Lab/GSP379.md
+++ b/Use Functions, Formulas, and Charts in Google Sheets: Challenge Lab/GSP379.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨  Autoscaling TensorFlow Model Deployments with TF Serving and Kubernetes || GSP777 ✨
+✨  Use Functions, Formulas, and Charts in Google Sheets: Challenge Lab || GSP379 ✨
 </h1>
 
 <div align="center">
