--- a/Use Functions, Formulas, and Charts in Google Sheets: Challenge Lab/GSP379.md
+++ b/Use Functions, Formulas, and Charts in Google Sheets: Challenge Lab/GSP379.md
@@ -27,22 +27,9 @@
 
 ---
 
-## ⚙️ <ins>Lab Environment Setup</ins>
-
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-**🌐Launch Cloud Shell:**
-Start your Google CloudShell session by [clicking here](https://console.cloud.google.com/home/dashboard?project=&pli=1&cloudshell=true).
-
-## 💻 **Execute in Cloud Shell** 
-
-```
-curl -LO raw.githubusercontent.com/Arcade-With-Us/Google-Cloud-Labs/refs/heads/main/Creating%20Cross%20region%20Load%20Balancing/GSP157.sh
-
-sudo chmod +x GSP157.sh
-
-./GSP157.sh
-```
+* Download files ftom drive: [Click](https://drive.google.com/drive/folders/1Q4khgq-y9FNKDH65lEMoUjm2VZws5N6k?usp=sharing)
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
