--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -432,7 +432,11 @@ view: users {
   }
 }
 ```
-* Click **Save Changes**. Next, navigate to the Order Items Explore.
+* Click **Save Changes**.
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
+* Next, navigate to the Order Items Explore.
 * Under the Users view, select the **`Country`** dimension.
 * Select the new **`Dynamic Count`** measure under the **Users** view.
 * Click on the `filter` icon next to the new Filter-Only Field called **`Select Traffic Source`**.
