--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -215,7 +215,10 @@ view: order_items {
 }
 ```
 * Click **Save Changes**.
-* Next, navigate to the **Order Items Explore**.
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
+* Next, navigate to the Order Items Explore.
 * Under the Order Items view, select the new **`Dynamic Timeframe`** dimension and the **`Order Count`** measure.
 * Click on the `filter` icon next to the new Filter-Only Field called **`Select Timeframe`**.
 * For the filter option at the top of the UI, leave “is” selected. Select **Month** from the drop-down menu.
