--- a/Enhancing User Interactivity in Looker with Liquid/GSP934.md
+++ b/Enhancing User Interactivity in Looker with Liquid/GSP934.md
@@ -309,7 +309,11 @@ view: products {
   }
 }
 ```
-* Click **Save Changes**. Next, navigate to the **Order Items Explore**.
+* Click **Save Changes**.
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
+* Next, navigate to the Order Items Explore.
 * Under the Products view, select the dimension called **`Category Comparison`**.
 * Click on the `filter` icon next to the new Filter-Only Field called Select **`Category`**.
 * Under the Order Items view, select the **`Order Count`** measure.
