--- a/Google Apps Script: Access Google Sheets, Maps & Gmail in 4 Lines of Code/GSP235.md
+++ b/Google Apps Script: Access Google Sheets, Maps & Gmail in 4 Lines of Code/GSP235.md
@@ -40,7 +40,8 @@ On the blank spreadsheet, click into the first cell in the upper left-hand corne
 # For Task no. 2:
 Click **Extensions > Apps Script** from google sheets and then in Code.gs part paste this code:
 _Reminder_: Change the email with your **student email id**
-```
+
+```cpp
 function sendMap() {
     var sheet = SpreadsheetApp.getActiveSheet();
     var address = sheet.getRange("A1").getValue();
