--- a/Build LookML Objects in Looker: Challenge Lab/GSP361.md
+++ b/Build LookML Objects in Looker: Challenge Lab/GSP361.md
@@ -24,7 +24,7 @@
 ## ⚙️ <ins>Lab Environment Setup</ins>
 ![Arcade With Us](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
 
-> ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
+> ✅ **NOTE:** *Please tap on the development mode toggle to enable it.*
 ---
 ## ⚙️ **Lab Environment Configuration**
 
