--- a/Build LookML Objects in Looker: Challenge Lab/GSP361.md
+++ b/Build LookML Objects in Looker: Challenge Lab/GSP361.md
@@ -31,7 +31,10 @@
 > 💡 **Tip:** *Ensure you watch the complete video guide to achieve full scores on the "Check My Progress" steps.*
 
 1.  **Define the `order_items_challenge` View:**
-  *   Initiate a new LookML view file and name it `order_items_challenge`.
+  *   Initiate a new LookML view file and name it
+    ```
+    order_items_challenge
+    ```
   *   Populate this file with the following LookML code:
 
   ```lookml
