--- a/Build LookML Objects in Looker: Challenge Lab/GSP361.md
+++ b/Build LookML Objects in Looker: Challenge Lab/GSP361.md
@@ -31,7 +31,7 @@
 > 💡 **Tip:** *Ensure you watch the complete video guide to achieve full scores on the "Check My Progress" steps.*
 
 1.  **Define the `order_items_challenge` View:**
-  *   Initiate a new LookML view file and name it
+  *   Initiate a new LookML view file and name it `order_items_challenge`
 ```
 order_items_challenge
 ```
@@ -80,6 +80,9 @@ order_items_challenge
 
 2.  **Establish the `user_details` View:**
   *   Create a second LookML view file, naming it `user_details`.
+```
+order_items_challenge
+```
   *   Insert the LookML code provided below into this new file:
 
   ```lookml
