--- a/Build LookML Objects in Looker: Challenge Lab/GSP361.md
+++ b/Build LookML Objects in Looker: Challenge Lab/GSP361.md
@@ -81,7 +81,7 @@ order_items_challenge
 2.  **Establish the `user_details` View:**
   *   Create a second LookML view file, naming it `user_details`.
 ```
-order_items_challenge
+user_details
 ```
   *   Insert the LookML code provided below into this new file:
 
