--- a/Creating dynamic SQL derived tables with LookML and Liquid/GSP932.md
+++ b/Creating dynamic SQL derived tables with LookML and Liquid/GSP932.md
@@ -1,5 +1,5 @@
 <h1 align="center">
-✨  Cloud Armor Preconfigured WAF Rules || GSP879 ✨
+✨   Creating dynamic SQL derived tables with LookML and Liquid || GSP879 ✨
 </h1>
 
 <div align="center">
