--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -3,7 +3,7 @@
 </h1>
 
 <div align="center">
-  <a href="https://www.cloudskillsboost.google/focuses/17649?parent=catalog"_blank" rel="noopener noreferrer">
+  <a href="https://www.cloudskillsboost.google/focuses/17881?catalog_rank=%7B%22rank%22%3A1%2C%22num_filters%22%3A0%2C%22has_search%22%3Atrue%7D&parent=catalog&search_id=48254687"_blank" rel="noopener noreferrer">
     <img src="https://img.shields.io/badge/Open_Lab-Cloud_Skills_Boost-4285F4?style=for-the-badge&logo=google&logoColor=white&labelColor=34A853" alt="Open Lab Badge">
   </a>
 </div>
