--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -31,7 +31,14 @@
 
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
-# Task 1. Create a primary query
+## Task 1. Create a primary query
+* n the Looker navigation menu, click Explore. Under FAA, click Flights.
+* In the left pane, under All Fields, expand Flight Details.
+* Click Carrier and Flight Num.
+* You can reorder selected fields in the right pane by dragging and dropping the field name.
+* Expand Aircraft Origin and click City.
+* Expand Flight Details and in MEASURES, click Cancelled Count.
+* Expand Arrival Date, hover over Year, and click Filter by field.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
