--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -39,6 +39,8 @@
 * Expand Aircraft Origin and click City.
 * Expand Flight Details and in MEASURES, click Cancelled Count.
 * Expand Arrival Date, hover over Year, and click Filter by field.
+* In the Filters pane, set Flights Details Arrival Year to is in the year, and enter 2000.
+* Click Run to see the results of the primary query.
 ---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
