--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -42,6 +42,7 @@
 * In the Filters pane, set Flights Details Arrival Year to is in the year, and enter 2000.
 * Click Run to see the results of the primary query.
 ---
+## Task 2. Add the next source query
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
