--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -43,6 +43,13 @@
 * Click Run to see the results of the primary query.
 ---
 ## Task 2. Add the next source query
+* In the top right pane of the Explore for your primary query, click Settings.
+* Click Merge Results. This will open the Choose an Explore window.
+* In the Choose an Explore window, click Airports.
+* In the All Fields pane, click City and Average Elevation.
+* Click Run to see the results of the source query.
+* Click Save to merge the query into your primary query.
+---
 
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
