--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -50,7 +50,7 @@
 * Click Run to see the results of the source query.
 * Click Save to merge the query into your primary query.
 ---
-
+## Task 3. Check the merge rules and run the merge
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
