--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -51,6 +51,8 @@
 * Click Save to merge the query into your primary query.
 ---
 ## Task 3. Check the merge rules and run the merge
+* Change the dropdowns so that the correct dimensions are used in the merge rule.
+[Look](https://cdn.qwiklabs.com/P6OtDjrZhMFHmYXMYZ3gktq%2BmkQB8OkdI5tSiFds%2BhU%3D)
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
