--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -52,7 +52,9 @@
 ---
 ## Task 3. Check the merge rules and run the merge
 * Change the dropdowns so that the correct dimensions are used in the merge rule.
-[Look](https://cdn.qwiklabs.com/P6OtDjrZhMFHmYXMYZ3gktq%2BmkQB8OkdI5tSiFds%2BhU%3D)
+![Look](https://cdn.qwiklabs.com/P6OtDjrZhMFHmYXMYZ3gktq%2BmkQB8OkdI5tSiFds%2BhU%3D)
+* Click Run to view the results of your merged results.
+* Click on Airports Average Elevation to sort the values in descending order.
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
