--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -55,6 +55,8 @@
 ![Look](https://cdn.qwiklabs.com/P6OtDjrZhMFHmYXMYZ3gktq%2BmkQB8OkdI5tSiFds%2BhU%3D)
 * Click Run to view the results of your merged results.
 * Click on Airports Average Elevation to sort the values in descending order.
+---
+## Task 4. Edit the merged results
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
