--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -57,6 +57,12 @@
 * Click on Airports Average Elevation to sort the values in descending order.
 ---
 ## Task 4. Edit the merged results
+* In the Source Queries pane, click the gear icon next to Flights and then click Edit.
+* There should be a label Primary next to the gear icon.
+* In the left pane, click All Fields.
+* Expand Aircraft Destination and click City.
+* Click Run to view the results of your modified primary query.
+* Click Save to save the primary source query.
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
