--- a/Merging Results from Different Explores in Looker/GSP856.md
+++ b/Merging Results from Different Explores in Looker/GSP856.md
@@ -63,6 +63,8 @@
 * Expand Aircraft Destination and click City.
 * Click Run to view the results of your modified primary query.
 * Click Save to save the primary source query.
+---
+## Task 5. Save your merged results to a dashboard
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
 Your hard work and determination paid off! 💻
